*** 19
**** =13:58= minor fix to "SelectAllElementsInView" command to prevent it from selecting views
*** 20
**** =01:41= tried adding "ExportSelectedViews" command to automate export process of revit sheets to separate files, but it was confirmed that it isn't available in API
only possible via PostableCommand
[[Jeremy Tammik on autodesk forum][https://forums.autodesk.com/t5/revit-api-forum/api-version-of-quot-save-as-gt-library-quot/m-p/12452936/highlight/true#M75998]]
* 2025
** January
*** 06
**** =12:18= updated IncrementSheetNumbers command to handle different numbering format
needed to update sheets numbered with a hyphen in third place, e.g. 35-501, 35-502
hopefully it won't get more complex than that, wish we just all followed the iso standard
[[https://chatgpt.com/share/677bcb3b-d8f8-800c-adc4-769b651e9791][chatgpt]]
**** =16:32= updated OpenViews command, added "Sheet Folder" column, remove redundant "View Type"
[[https://chatgpt.com/share/677c0771-806c-800c-833b-40733346649a][chatgpt]]
** February
*** 04
**** =22:53= tried writing DeleteSelectedSelections command, but it looks like "saved selections" aren't available to revit api 
the problem is that default EditSelection command in Revit won't let you delete multiple saved selections in one go making deletions of multiple saved selections a cumbersome process
may have to store Element Ids/GUIDs in a separate file instead to avoid this overhead in the future and manage it with custom commands
*** 05
**** =19:22= tried increasing performance of DataGrid2 by various means, but nothing seemed to make any major difference
virtual list control among other things
hopefully no new bugs were introduced in the process
***** tried making it dark themed as well, but sadly couldn't get scrollbars to change colors, so reverted back to light
*** 12
**** =23:33= couldn't adapt TagNotTaggedElementsInSelectedViews command to tag elements in linked models